Fix fix nav on mobile

--- a/assets/css/layout/_footer.scss
+++ b/assets/css/layout/_footer.scss
@@ -1,3 +1,6 @@
 body > footer {
     padding: 2rem 0;
+    @media (max-width: $md) {
+        margin-bottom: $fixNavHeight;
+    }
 }
